<resources>
    <string name="app_name">Landscape</string>
    <string name="content">Content</string>
    <string name="title">Title</string>
    <string name="add_note">Add a new note</string>
    <string name="update_note">Update note</string>
    <string name="project_name">Project name</string>
    <string name="blank_warning">"You can't leave this blank"</string>
    <string name="member">Members</string>
    <string name="username">Username</string>
    <string name="description">Description</string>
    <string name="log_in">Sign in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_project">Create project</string>
    <string name="project_owner">Project owner</string>
    <string name="admin">Admin</string>
    <string name="note">Note</string>
    <string name="group_task_list">Group task list:</string>
    <string name="account_name">Account\'s name</string>
    <string name="task_group_name">Task Group name</string>
    <string name="add_task">Add a new task</string>
    <string name="task_remain">Task remain:</string>
    <string name="task_late">Task late:</string>
    <string name="home">Home</string>
    <string name="my_profile">My profile</string>
    <string name="change_password">Change password</string>
    <string name="overview">Overview</string>
    <string name="task">Tasks</string>
    <string name="timeline">Timeline</string>
    <string name="account">Account</string>
    <string name="log_in_to_your_account">Login to your Account</string>
    <string name="create_your_account">Create your Account</string>
    <string name="sign_up">Sign up</string>
    <string name="remember_me">Remember me?</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="log_out">Log out</string>
    <string name="state">State</string>
    <string name="delete_note">Delete</string>
    <string name="add_state">Add a new state</string>
    <string name="state_name">State name</string>
    <string name="start_date">Start date:</string>
    <string name="end_date">End date:</string>
    <string name="attachment">Attachment:</string>
    <string name="comment">Write a comment…</string>
    <string name="new_state">New state</string>
    <string name="add_grouptask">Add a Group task</string>
    <string name="validate">\"Username or password is invalid\"</string>
    <string name="loginfail">Login fail</string>
    <string name="newpassword">New password</string>
    <string name="confirm_delete">Do you want to delete project</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="save_and_back" >Save and back</string>
    <string name="projectid">ID:</string>

</resources>