<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navHome"
        android:title="@string/home"
        android:icon="@drawable/ic_home"/>

    <item
        android:title="@string/account"
        android:id="@+id/navAccount">
        <menu>
            <item
                android:id="@+id/navProfile"
                android:title="@string/my_profile"
                android:icon="@drawable/ic_profile"/>
            <item
                android:id="@+id/navChangepassword"
                android:title="@string/change_password"
                android:icon="@drawable/ic_password"/>
        </menu>
    </item>

    <item
        android:id="@+id/navLogout"
        android:title="@string/log_out"
        android:icon="@drawable/ic_logout"/>

</menu>