<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/tvProjectName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/project_name"
            android:textColor="@color/text_color"
            android:background="@null"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_weight="9"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="10dp"
            />

        <ImageView
            android:id="@+id/btSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:src="@drawable/ic_check"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/save"/>

    </LinearLayout>

   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="10dp"
       android:layout_marginBottom="5dp">

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/projectid"/>

       <TextView
           android:id="@+id/tvProjectId"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="3dp"
           />
   </LinearLayout>

    <EditText
        android:id="@+id/tvDescribe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textColor="@color/text_color"
        android:background="@null"
        android:textSize="19sp"
        android:layout_marginStart="10dp"/>

    <TextView
        android:id="@+id/tvProjectOwner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"

        android:layout_marginVertical="10dp"
        android:text="@string/project_owner"
        android:textSize="14sp"
        />

    <LinearLayout
        android:id="@+id/linearOwner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="10dp"
        >

        <ImageView
            android:id="@+id/ivOwner"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_profile"

            android:layout_marginHorizontal="5dp"
            />
        <TextView
            android:id="@+id/tvOwnerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"

            android:text="Account's name"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/tvProjectAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin"
        android:textSize="14sp"

        android:layout_marginVertical="10dp"
        android:layout_marginStart="10dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvAdmin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:itemCount="3"
        android:layout_marginHorizontal="5dp" />


    <TextView
        android:id="@+id/tvState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/state"
        android:textSize="14sp"

        android:layout_marginVertical="10dp"
        android:layout_marginStart="10dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btAddState"
        android:gravity="center_vertical|start"
        android:paddingStart="20dp"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/secondary"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="5dp"

        android:text="@string/add_state"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginHorizontal="5dp"
        />

    <TextView
        android:id="@+id/tvNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note"
        android:textSize="14sp"

        android:layout_marginVertical="10dp"
        android:layout_marginStart="10dp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btAddNote"
        android:gravity="center_vertical|start"
        android:paddingStart="20dp"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/secondary"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="5dp"

        android:text="@string/add_note"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        tools:listitem="@layout/layout_note"

        />


</LinearLayout>