<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="343dp"
    android:layout_height="685dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/bg_dialog">

    <EditText
        android:id="@+id/etNoteTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:textSize="30sp"
        android:hint="@string/title"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/etContent"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:textSize="25sp"
        android:paddingTop="5dp"
        android:layout_marginStart="10dp"
        android:background= "@null"
        android:hint="@string/content"
        android:gravity="start"

        app:layout_constraintTop_toBottomOf="@id/etNoteTitle"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@id/etContent"
        tools:layout_editor_absoluteX="10dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btUpdateNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/bg_note"

            android:text="@string/update_note" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btDeleteNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button_delete"

            android:text="@string/delete_note" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>