<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:id="@+id/projectLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_project"
    android:padding="10dp"
    android:layout_margin="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
        <TextView
            android:id="@+id/tvProjectName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/text_color"
            android:textSize="20sp"
            android:gravity="center"/>
        <TextView
            android:id="@+id/tvDescribe"
            android:textColor="@color/text_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="3dp"
            android:text="@string/description"/>
        <TextView
            android:id="@+id/tvTaskRemain"
            android:textColor="@color/text_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="3dp"
            android:text="@string/task_remain"/>
        <TextView
            android:id="@+id/tvTaskLate"
            android:textColor="@color/text_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="3dp"
            android:text="@string/task_late"/>

    </LinearLayout>
