<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/background">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_landscape"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in_to_your_account"
        android:textSize="25sp"
        android:textStyle="bold"

        android:layout_gravity="center"
        android:layout_marginVertical="20dp"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="55dp"
        android:background="@drawable/bg_edittext"
        android:hint="@string/username"

        android:inputType="textCapSentences"
        android:paddingStart="10dp"
        android:text="minh@gmail.com" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_edittext"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:text="123456"

            android:paddingStart="10dp"
            android:layout_marginHorizontal="20dp"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:id="@+id/imEye"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:layout_marginEnd="25dp"
            android:tintMode="@color/text_color"

            android:padding="5dp"
            android:src="@drawable/ic_show_password"
            tools:ignore="RtlHardcoded" />

    </FrameLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">
        <TextView
            android:id="@+id/tvForgotpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textSize="15sp"
            android:textColor="@color/text_color"
            android:gravity="start"
            android:textStyle="bold"

            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />



        <CheckBox
            android:id="@+id/cbRemember"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/remember_me"
            android:gravity="end|center"
            android:button="@null"
            android:textStyle="bold"
            android:textColor="@color/text_color"
            android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="15dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btLogin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/log_in"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:background="@drawable/bg_button_login"

        android:layout_marginTop="65dp"
        android:layout_marginHorizontal="20dp"
        />

    <LinearLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/dont_have_an_account"/>
        <TextView
            android:id="@+id/tvSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/sign_up"
            android:layout_marginStart="4dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:padding="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_an_account"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textStyle="bold"
            android:text="@string/sign_up"/>

    </LinearLayout>








</LinearLayout>