<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/bg_dialog">

    <EditText
        android:id="@+id/etNoteTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:textSize="30sp"
        android:hint="@string/title"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/etContent"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginStart="10dp"
        android:paddingTop="5dp"
        android:background= "@null"
        android:textSize="25sp"
        android:hint="@string/content"
        android:gravity="start"

        app:layout_constraintTop_toBottomOf="@id/etNoteTitle"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btAddNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_note"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="20dp"

        android:text="@string/add_note"
        app:layout_constraintBottom_toBottomOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>