<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/background">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_landscape"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_your_account"
        android:textSize="25sp"
        android:textStyle="bold"

        android:layout_gravity="center"
        android:layout_marginVertical="20dp"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="55dp"
        android:background="@drawable/bg_edittext"
        android:hint="@string/username"

        android:inputType="textCapSentences"
        android:paddingStart="10dp"
        tools:ignore="RtlSymmetry" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_edittext"
            android:inputType="textPassword"
            android:hint="@string/password"

            android:paddingStart="10dp"
            android:layout_marginHorizontal="20dp"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:id="@+id/imEye"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:layout_marginEnd="25dp"
            android:tintMode="@color/text_color"

            android:padding="5dp"
            android:src="@drawable/ic_show_password"
            tools:ignore="RtlHardcoded" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <EditText
            android:id="@+id/etConfirmpassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_edittext"
            android:inputType="textPassword"
            android:hint="@string/confirm_password"

            android:paddingStart="10dp"
            android:layout_marginHorizontal="20dp"
            tools:ignore="RtlSymmetry" />

        <ImageView
            android:id="@+id/imEye2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:layout_marginEnd="25dp"
            android:tintMode="@color/text_color"

            android:padding="5dp"
            android:src="@drawable/ic_show_password"
            tools:ignore="RtlHardcoded" />

    </FrameLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btSignup"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/sign_up"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:background="@drawable/bg_button_login"

        android:layout_marginTop="65dp"
        android:layout_marginHorizontal="20dp"
        />








</LinearLayout>