<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp">

    <ImageView
        android:id="@+id/ivWaring"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_warning"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvConfirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/confirm_delete"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivWaring"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvProjectName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/blue"
        android:textSize="21sp"
        android:layout_marginStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivWaring"
        app:layout_constraintTop_toBottomOf="@id/tvConfirm" />


    <Button
        android:id="@+id/btYes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yes"
        android:background="@color/red"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/tvProjectName"
        app:layout_constraintEnd_toEndOf="parent"/>
    <Button
        android:id="@+id/btCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/hint_color"
        android:text="@string/cancel"
        android:padding="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toTopOf="@id/btYes"
        app:layout_constraintEnd_toStartOf="@id/btYes"/>


</androidx.constraintlayout.widget.ConstraintLayout>